# Amo

./: .env.example  .gitignore  API.md  Cargo.toml  Dockerfile  README.md  TESTING.md  docker-compose.yml
migrations/: 001_cards.sql
src/: config.rs  error.rs  main.rs  prompts.rs  state.rs
src/analysis/: mod.rs  pipeline.rs  prompts.rs  types.rs
src/api/: admin.rs  analysis.rs  cards.rs  conflict.rs  emotional.rs  mod.rs
src/credits/: deduct.rs  mod.rs
src/llm/: anthropic.rs  mod.rs  openai.rs  types.rs
src/middleware/: admin_auth.rs  card_auth.rs  mod.rs
